# algo2

./: .gitignore  CMakeLists.txt  README.md  algo2.cpp  algo2.sln
algo2/: algo2.vcxproj  algo2.vcxproj.filters  graph.dot
include/: graph.h  graph_connection.h  graph_visualization.h  kernelization.h  vertex_cover.h
src/: algo2.cpp  graph.cpp  graph_connection.cpp  graph_visualization.cpp  kernelization.cpp  main.cpp  vertex_cover.cpp
x64/Debug/: algo2.exe.recipe  algo2.ilk  vc143.idb
x64/Debug/algo2.tlog/: algo2.lastbuildstate  clang-cl.command.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  lld-link.command.1.tlog  lld-link.read.1.tlog  lld-link.write.1.tlog
